backpack/src/snapshots/backpack__config__tests__load_remote_projects.snap
---
source: backpack/src/config.rs
expression: config
---
Config {
    project_sources: Some(
        [
            ProjectSource {
                name: "remote",
                link: "https://raw.githubusercontent.com/rusty-ferris-club/backpack-tap/main/integration-test.yaml",
            },
        ],
    ),
    projects: Some(
        {
            "rust": Project {
                shortlink: "rusty-ferris-club",
                is_git: None,
                description: None,
                source: External,
                mode: None,
                actions: None,
                swaps: None,
            },
        },
    ),
    vendors: None,
}
