backpack/src/snapshots/backpack__config__tests__merge_sources-2.snap
---
source: backpack/src/config.rs
expression: res
---
Ok(
    [
        (
            "community.yaml",
            Config {
                project_sources: None,
                projects: Some(
                    {
                        "rust": Project {
                            shortlink: "rusty-ferris-club",
                            is_git: None,
                            description: None,
                            run: None,
                            source: External,
                            mode: None,
                            actions: None,
                            swaps: None,
                        },
                    },
                ),
                vendors: None,
            },
        ),
        (
            "custom.yaml",
            Config {
                project_sources: None,
                projects: Some(
                    {
                        "react": Project {
                            shortlink: "kriasoft/react-starter-kit",
                            is_git: None,
                            description: None,
                            run: None,
                            source: External,
                            mode: None,
                            actions: None,
                            swaps: None,
                        },
                        "rust": Project {
                            shortlink: "rusty-ferris-club",
                            is_git: None,
                            description: None,
                            run: None,
                            source: External,
                            mode: None,
                            actions: None,
                            swaps: None,
                        },
                    },
                ),
                vendors: None,
            },
        ),
    ],
)
