backpack/src/snapshots/backpack__config__tests__merge_sources-3.snap
---
source: backpack/src/config.rs
expression: config_fully_loaded
---
(
    Config {
        project_sources: Some(
            [
                ProjectSource {
                    name: "community",
                    link: "https://raw.githubusercontent.com/rusty-ferris-club/backpack-tap/main/integration-test.yaml",
                },
                ProjectSource {
                    name: "custom",
                    link: "https://raw.githubusercontent.com/rusty-ferris-club/backpack-tap/main/integration-test2.yaml",
                },
            ],
        ),
        projects: Some(
            {
                "react": Project {
                    shortlink: "kriasoft/react-starter-kit",
                    is_git: None,
                    description: None,
                    run: None,
                    source: External,
                    mode: None,
                    actions: None,
                },
                "rust": Project {
                    shortlink: "rusty-ferris-club",
                    is_git: None,
                    description: None,
                    run: None,
                    source: External,
                    mode: None,
                    actions: None,
                },
            },
        ),
        vendors: None,
    },
    Merged,
)
