backpack/src/snapshots/backpack__config__tests__merge_sources.snap
---
source: backpack/src/config.rs
expression: config_fully_loaded
---
Config {
    projects: Some(
        {
            "nodejs": Project {
                shortlink: "correct/global",
                is_git: None,
                description: None,
                actions: None,
                swaps: None,
            },
        },
    ),
    vendors: None,
}
