backpack/src/snapshots/backpack__config__tests__remote_cannot_overwrite-2.snap
---
source: backpack/src/config.rs
expression: config_fully_loaded
---
(
    Config {
        project_sources: Some(
            [
                ProjectSource {
                    name: "community",
                    link: "https://raw.githubusercontent.com/rusty-ferris-club/backpack-tap/main/integration-test.yaml",
                },
            ],
        ),
        projects: Some(
            {
                "rust": Project {
                    shortlink: "correct/one",
                    is_git: None,
                    description: None,
                    run: None,
                    source: Local,
                    mode: None,
                },
            },
        ),
        vendors: None,
    },
    Merged,
)
