backpack/src/snapshots/backpack__config__tests__remote_project_sources_fetch.snap
---
source: backpack/src/config.rs
expression: res
---
Ok(
    [
        (
            "community.yaml",
            Config {
                project_sources: None,
                projects: Some(
                    {
                        "rust": Project {
                            shortlink: "rusty-ferris-club",
                            is_git: None,
                            description: None,
                            run: None,
                            source: External,
                        },
                    },
                ),
                vendors: None,
            },
        ),
    ],
)
