backpack/src/snapshots/backpack__config__tests__selection_filtering-2.snap
---
source: backpack/src/config.rs
expression: "config.projects_for_selection(&CopyMode::Apply)"
---
[
    (
        "all",
        Project {
            shortlink: "jondot/three",
            is_git: None,
            description: None,
            run: None,
            source: Local,
            mode: None,
            actions: None,
        },
    ),
    (
        "apply_only",
        Project {
            shortlink: "jondot/two",
            is_git: None,
            description: None,
            run: None,
            source: Local,
            mode: Some(
                Apply,
            ),
            actions: None,
        },
    ),
]
