backpack/src/snapshots/backpack__config__tests__selection_filtering-3.snap
---
source: backpack/src/config.rs
expression: "config.projects_for_selection(&CopyMode::All)"
---
[
    (
        "all",
        Project {
            shortlink: "jondot/three",
            is_git: None,
            description: None,
            run: None,
            source: Local,
            mode: None,
            actions: None,
            swaps: None,
        },
    ),
    (
        "apply_only",
        Project {
            shortlink: "jondot/two",
            is_git: None,
            description: None,
            run: None,
            source: Local,
            mode: Some(
                Apply,
            ),
            actions: None,
            swaps: None,
        },
    ),
    (
        "copy_only",
        Project {
            shortlink: "jondot/one",
            is_git: None,
            description: None,
            run: None,
            source: Local,
            mode: Some(
                Copy,
            ),
            actions: None,
            swaps: None,
        },
    ),
]
