backpack/src/snapshots/backpack__config__tests__selection_filtering.snap
---
source: backpack/src/config.rs
expression: "config.projects_for_selection(&CopyMode::Copy)"
---
[
    (
        "all",
        Project {
            shortlink: "jondot/three",
            is_git: None,
            description: None,
            run: None,
            source: Local,
            mode: None,
        },
    ),
    (
        "copy_only",
        Project {
            shortlink: "jondot/one",
            is_git: None,
            description: None,
            run: None,
            source: Local,
            mode: Some(
                Copy,
            ),
        },
    ),
]
