backpack/src/snapshots/backpack__config__tests__with_no_configs.snap
---
source: backpack/src/config.rs
expression: config
---
(
    Config {
        projects: None,
        vendors: None,
    },
    Default,
)
