backpack/src/snapshots/backpack__config__tests__with_no_global_folder-2.snap
---
source: backpack/src/config.rs
expression: empty_config
---
(
    Config {
        project_sources: None,
        projects: None,
        vendors: None,
    },
    Default,
)
